# MATS9.0_ICM_WorkTest

./: .gitignore  README.md  analyze_icm_run.py  critique.md  eval-checkpoint.plan.md  pyproject.toml  requirements.txt  test.ipynb  test2.ipynb
experiments/: 0_debug.sh
experiments/0_debug/: eval_results.json  icm_run.jsonl  icm_run_20251104_163520.jsonl
experiments/1_chat_refactor/: cmds.sh  icm_run.jsonl
experiments/2_with_logging/: cmds.sh  eval_results.json  icm.jsonl  icm_run.jsonl
experiments/3_no_logs_larger/: cmds.sh  eval_results.json  icm_run.jsonl
experiments/3_no_logs_larger/logs30/: eval_golden_labels.jsonl  eval_icm.jsonl  eval_zero_shot_base.jsonl  eval_zero_shot_chat.jsonl
experiments/4_full_scale/: cmds.sh  eval_golden_labels_checkpoint.json  eval_golden_labels_metrics.json  eval_golden_labels_predictions.jsonl  eval_icm_checkpoint.json  eval_icm_metrics.json  eval_icm_predictions.jsonl  eval_results.json  eval_zero_shot_base_checkpoint.json  eval_zero_shot_base_metrics.json  eval_zero_shot_base_predictions.jsonl  eval_zero_shot_chat_checkpoint.json  eval_zero_shot_chat_metrics.json  eval_zero_shot_chat_predictions.jsonl  icm_run_ckpt.jsonl  icm_run_ckpt_checkpoint.json
experiments/4_full_scale/debug_logs/: eval_golden_labels.jsonl  eval_icm.jsonl  eval_zero_shot_base.jsonl  eval_zero_shot_chat.jsonl
experiments/4_full_scale/old_ckpts/: eval_golden_labels_checkpoint.json  (+11 more)
icm_results/: truthfulqa_icm_20251104_162453.jsonl
src/: cli.py  core.py  dataset.py  evaluation.py  hyperbolic_client.py  model_client.py  storage.py
