[project]
name = "mats-icm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "openai>=2.7.1",
    "seaborn>=0.13.2",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.3",
]
